update Tags.java ,make it easy to use ,you can just add a directory to CLASSPATH ,then all jar under this directory will be added  to classpath automaticlly